# color-detector

./: CIE_matching_functions.h  CMakeLists.txt  main.cpp  mysteryS15.spectrum  mysteryS16.spectrum
